fix vertical rule alignment

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -515,7 +515,7 @@ nav a:last-child{
     background-color: #343A40;
     display: inline;
     position: absolute;
-    top: 45%;
+    top: 48.5%;
     border: none;
     box-shadow: 1px 0 20px 1px #02475E;
   }
@@ -526,9 +526,17 @@ nav a:last-child{
     background-color: #343A40;
     display: inline;
     position: absolute;
-    top: 45%;
+    top: 48.5%;
     border: none;
     box-shadow: 1px 0 20px 1px #51C4D3;
+  }
+
+  .vertical-rule-home{
+    top: 45%;
+  }
+
+  .vertical-rule-alt-home{
+    top: 40%;
   }
 
   img{
